113: Update Valhalla demos
Task-Url: https://github.com/unitsofmeasurement/uom-demos/issues/113