@@ -11,7 +11,7 @@
 	<artifactId>valhalla</artifactId>
 	<name>Project Valhalla Demos</name>
 	<properties>
-		<java.version>14</java.version>
+		<java.version>23</java.version>
 	</properties>
 	<build>
 		<plugins>
@@ -19,28 +19,32 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
+<!--
 					<source>${java.version}</source>
 					<target>${java.version}</target>
 					<verbose>true</verbose>
 					<fork>true</fork>
 					<executable>${java.bin}/javac.exe</executable>
 					<compilerVersion>${java.version}</compilerVersion>
+					-->
+					<release>${java.version}</release>
+					<enablePreview>true</enablePreview>
 				</configuration>
 			</plugin>
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.0.0-M3</version>
 				<configuration>
 					<jvm>${java.bin}/java.exe</jvm>
+					<argLine>--enable-preview</argLine>
 				</configuration>
 			</plugin>
 
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
-				<version>1.3.2</version>
+				<version>1.6.0</version>
 				<executions>
 					<execution>
 						<goals>
@@ -49,11 +53,16 @@
 					</execution>
 				</executions>
 				<configuration>
-					<executable>${java.bin}/java.exe</executable>
+					<mainClass>tech.uom.demo.valhalla.ValhallaDemo</mainClass>
+					<!-- executable>${java.bin}/java.exe</executable -->
+					<commandlineArgs>--enable-preview</commandlineArgs>
 					<arguments>
+					    <argument>--enable-preview</argument>
+<!--					    
 						<argument>-classpath</argument>
 						<classpath />
 						<argument>tech.uom.demo.valhalla.ValhallaDemo</argument>
+-->						
 					</arguments>
 				</configuration>
 			</plugin>
@@ -71,12 +80,10 @@
 		<dependency>
 			<groupId>tech.uom.lib</groupId>
 			<artifactId>uom-lib-common</artifactId>
-			<version>${lib.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>tech.units</groupId>
 			<artifactId>indriya</artifactId>
-			<version>${ri.version}</version>
 		</dependency>
 	</dependencies>
 
